[tool.poetry]
name = "scripts-dbm"
version = "0.1.0"
description = ""
authors = ["David BRAHIM <david.brahim@susu.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chargebee = "^2.23.0"
aws-lambda-typing = "^2.16.4"
pydantic = "^1.10.6"
requests = "^2.28.2"
hubspot-api-client = "^7.5.0"
gspread = "^6.0.1"
ssm-cache = "^2.10"
pyyaml = "^6.0.1"
gspread-formatting = "^1.1.2"
jinja2 = "^3.1.3"
pdfkit = "^1.0.0"
wkhtmltopdf = "^0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
pyyaml = "^6.0"
pytest-csv-params = "^1.0.0"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "INFO"
